# threshold-ECDSA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: m9_bench.cpp  protocol_flow_bench.cpp
bench/results/classic_20260223_000650/: README.md  index.md  n2_t1_p2048_k3_s20.txt  n3_t1_p2048_k3_s20.txt  n5_t2_p2048_k2_s20.txt  n5_t2_p3072_k1_s10.txt  summary.csv  summary.md
include/tecdsa/common/: secure_zeroize.hpp
include/tecdsa/crypto/: commitment.hpp  ec_point.hpp  encoding.hpp  hash.hpp  paillier.hpp  random.hpp  scalar.hpp  strict_proofs.hpp  transcript.hpp
include/tecdsa/net/: envelope.hpp  in_memory_transport.hpp  transport.hpp
include/tecdsa/protocol/: keygen_session.hpp  session.hpp  session_router.hpp  sign_session.hpp
src/crypto/: commitment.cpp  ec_point.cpp  encoding.cpp  hash.cpp  paillier.cpp  random.cpp  scalar.cpp  strict_proofs.cpp  transcript.cpp
src/net/: envelope.cpp  in_memory_transport.cpp
src/protocol/: keygen_session.cpp  session.cpp  session_router.cpp  sign_session.cpp
tests/: crypto_primitives_tests.cpp  keygen_flow_tests.cpp  m0_tests.cpp  m2_tests.cpp  m3_tests.cpp  m4_tests.cpp  protocol_infrastructure_tests.cpp  sign_flow_tests.cpp
